price_watcher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-watcher
  labels:
    app: price-watcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: price-watcher
  template:
    metadata:
      labels:
        app: price-watcher
    spec:
      containers:
        - name: price-watcher
          image: kaiweimo/price_watcher:0.1.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9100
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
