price_watcher/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-watcher
  labels:
    app: price-watcher
spec:
  selector:
    app: price-watcher
  ports:
    - name: http
      port: 9100
      targetPort: http
