price_watcher/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: price-watcher
  labels:
    app: price-watcher
spec:
  ingressClassName: traefik
  rules:
    - host: price-watcher.kwm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: price-watcher
                port:
                  number: 9100
  tls:
    - secretName: kwm-local-wildcard
      hosts:
        - price-watcher.kwm.local
